--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -36,14 +36,6 @@ body {
     color: $color-text-dark;
 }
 
-.bgcolor {
-    color: #133B60;
-}
-
-
-
-
-
 .bg-video {
     position: fixed;
     top: 0;
@@ -94,6 +86,7 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 1;
     background-color: rgba(#000000, 0.9);
 
     &.is-open {
@@ -125,6 +118,10 @@ body {
         transform: translate(-50%, -50%) scale(1);
         width: 85%;
         height: 85%;
+
+        @media ($media-small-vertical) {
+            height: 65%;
+        }
 
         @at-root .animation__show-modal__enter & {
             opacity: 0;
@@ -167,6 +164,13 @@ body {
         border: none;
         margin: 0;
         // ---
+
+        @media ($media-small) {
+            transform: translateY(calc(-100% - 16px));
+        }
+        @media ($media-small-vertical) {
+            transform: translateX(calc(100% + 16px));
+        }
 
         @at-root .is-open & {
             display: inline-block;
@@ -395,8 +399,13 @@ body {
         font-weight: normal;
     }
 
-    &--theme-dark &__item {
-        // this is the default
+    &--theme-light &__hamburger-line {
+        background-color: $color-text-light;
+    }
+
+    &--theme-dark &__item,
+    &--theme-dark &__hamburger-line {
+        // default
     }
 }
 
@@ -425,6 +434,19 @@ main {
     align-items: center;
     width: 100vw;
     min-height: 100vh;
+
+    @media ($media-small) {
+        padding: 0 $spacing-large;
+    }
+
+    .demo-button a {
+        display: block;
+
+        svg {
+            display: block;
+            width: 100%;
+        }
+    }
 }
 
 .contact {
