--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 # The real Sass/SCSS/CSS is in the `_sass` folder.
 ---
 
-$base-url: "{{ site.url }}";
+$base-url: "{{ site.url | relative_url }}";
 
 $ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
