--- a/_includes/svg-x.html
+++ b/_includes/svg-x.html
@@ -1,4 +1,4 @@
 {% comment %}
-  --> TODO: replace this with the "x" svg
+  TODO: replace this with the "x" svg
 {% endcomment %}
 <span>close</span>
