--- a/_includes/meta-apple.html
+++ b/_includes/meta-apple.html
@@ -7,22 +7,32 @@
 {% comment %}
   <!--
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width = 320, initial-scale = 2.3, user-scalable = no">
-
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no">
-    <meta name= "viewport" content = "width = 320, initial-scale = 2.3, user-scalable = no">
-    <meta name= "viewport" content = "width = device-width">
-    <meta name = "viewport" content = "initial-scale = 1.0">
-    <meta name = "viewport" content = "initial-scale = 2.3, user-scalable = no">
-    <link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" href="touch-icon-iphone.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
-    <link rel="apple-touch-startup-image" href="/startup.png">
+    <meta name="viewport" content="width=320, initial-scale=2.3, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=2.3, user-scalable=no">
   -->
 {% endcomment %}
+
+<meta name="application-name" content="Pocono Digital House"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="{{ '/assets/img/icons/mstile-144x144.png' | relative_url }}" />
+<meta name="msapplication-square70x70logo" content="{{ '/assets/img/icons/mstile-70x70.png' | relative_url }}" />
+<meta name="msapplication-square150x150logo" content="{{ '/assets/img/icons/mstile-150x150.png' | relative_url }}" />
+<meta name="msapplication-wide310x150logo" content="{{ '/assets/img/icons/mstile-310x150.png' | relative_url }}" />
+<meta name="msapplication-square310x310logo" content="{{ '/assets/img/icons/mstile-310x310.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ '/assets/img/icons/apple-touch-icon-57x57.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ '/assets/img/icons/apple-touch-icon-114x114.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ '/assets/img/icons/apple-touch-icon-72x72.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/assets/img/icons/apple-touch-icon-144x144.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ '/assets/img/icons/apple-touch-icon-60x60.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ '/assets/img/icons/apple-touch-icon-120x120.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ '/assets/img/icons/apple-touch-icon-76x76.png' | relative_url }}" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ '/assets/img/icons/apple-touch-icon-152x152.png' | relative_url }}" />
+<link rel="icon" type="image/png" href="{{ '/assets/img/icons/favicon-196x196.png' | relative_url }}" sizes="196x196" />
+<link rel="icon" type="image/png" href="{{ '/assets/img/icons/favicon-96x96.png' | relative_url }}" sizes="96x96" />
+<link rel="icon" type="image/png" href="{{ '/assets/img/icons/favicon-32x32.png' | relative_url }}" sizes="32x32" />
+<link rel="icon" type="image/png" href="{{ '/assets/img/icons/favicon-16x16.png' | relative_url }}" sizes="16x16" />
+<link rel="icon" type="image/png" href="{{ '/assets/img/icons/favicon-128.png' | relative_url }}" sizes="128x128" />
