updates the modal 'close' icon

--- a/_includes/svg-x.html
+++ b/_includes/svg-x.html
@@ -1,4 +1,7 @@
-{% comment %}
-  TODO: replace this with the "x" svg
-{% endcomment %}
-<span>close</span>
+<svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34">
+    <g fill="none" fill-rule="evenodd" transform="translate(1 1)">
+        <path fill="#ffffff" d="M11.139 12.023l.884-.884 8.838 8.838-.884.884z"/>
+        <path fill="#ffffff" d="M19.977 11.139l.884.884-8.838 8.838-.884-.884z"/>
+        <circle cx="16" cy="16" r="16" stroke="#ffffff"/>
+    </g>
+</svg>
