--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,11 @@ $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 $font-abolition: 'abolition';
 $font-calibre: 'calibre';
 
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
+
 $color-brand: #dcae6d;
 $color-text-light: #efefef;
 $color-text-dark: #133b60;
