--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,6 +34,7 @@ $spacing-mega: 48px;
 $media-medium: "max-width: 62em";
 $media-small: "max-width: 40em";
 $media-small-vertical: "max-height: 25em";
+$media-tiny: "max-width: 25em";
 
 $nav-height-large: ($spacing-huge * 2) + $spacing-regular;
 $nav-height-small: ($spacing-huge * 2) + $spacing-regular - $spacing-small;
