Nav: updates instagram and blog links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,13 +25,13 @@
     </a>
     <a
       class="nav__item nav__item--instagram"
-      href="https://www.instagram.com/pocono_digital/" target="_blank"
+      href="https://www.instagram.com/poconodigitalhouse/" target="_blank"
     >
       <span>instagram</span>
     </a>
     <a
       class="nav__item nav__item--blog"
-      href="https://www.instagram.com/pocono_digital/" target="_blank"
+      href="https://medium.com/@PoconoDigitalHouse" target="_blank"
     >
       <span>blog</span>
     </a>
