--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,8 +30,8 @@
       <span>instagram</span>
     </a>
     <a
-      class="nav__item nav__item--blog"
-      href="https://medium.com/@PoconoDigitalHouse" target="_blank"
+      class="nav__item nav__item--work"
+      href="https://vimeo.com/PoconoDigitalHouse" target="_blank"
     >
       <span>blog</span>
     </a>
