--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
       <span>instagram</span>
     </a>
     <a
-      class="nav__item nav__item--work"
+      class="nav__item nav__item--blog"
       href="https://vimeo.com/PoconoDigitalHouse" target="_blank"
     >
       <span>blog</span>
