--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
       class="nav__item nav__item--work"
       href="https://vimeo.com/PoconoDigitalHouse" target="_blank"
     >
-      <span>blog</span>
+      <span>work</span>
     </a>
   </div>
 </nav>
