--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,10 +30,10 @@
       <span>instagram</span>
     </a>
     <a
-      class="nav__item nav__item--blog"
-      href="https://medium.com/@PoconoDigitalHouse" target="_blank"
+      class="nav__item nav__item--work"
+      href="https://vimeoPoconoDigitalHouse" target="_blank"
     >
-      <span>blog</span>
+      <span>work</span>
     </a>
   </div>
 </nav>
