Revert "Update nav.html"
This reverts commit fd9e5c3d905c69d3ed06ee2b20e8a1b475bd57cf.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
     </a>
     <a
       class="nav__item nav__item--work"
-      href="https://vimeo.com/PoconoDigitalHouse/" target="_blank"
+      href="https://vimeoPoconoDigitalHouse" target="_blank"
     >
       <span>work</span>
     </a>
